[package]
name = "lvt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = {version = "0.8.4",features = ["multipart"] }
tower-http = { version = "0.6.1", features = ["limit", "trace"] }
base64 = "0.22.1"
clap = { version = "4.5.37", features = ["derive"] }
regex = "1.11.1"
rig-core = "0.11.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"
